NLU for adjectives

--- a/conversational/data/nlu.yml
+++ b/conversational/data/nlu.yml
@@ -394,6 +394,14 @@ nlu:
     - renovation
     - stacking ring toy
     - paper cutter
+    - elven
+    - crazy
+    - edible
+    - sweet
+    - mini
+    - doodad
+    - raised
+    - invisible
 
 
 - intent: clear
